added mutations to customer.graphql and updated frontend

--- a/frontend-app/public/index.html
+++ b/frontend-app/public/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <!-- Add your application content here -->
+    <h1>Welcome to ORM - Customer Management App</h1>
+    <!-- Include links to navigate to different pages -->
+    <ul>
+      <li><a href="/customers">Customers</a></li>
+      <li><a href="/orders">Orders</a></li>
+      <li><a href="/products">Products</a></li>
+    </ul>
+  </div>
 </body>
 </html>
