updated css customer, order, product, home, and style.

--- a/frontend-app/public/index.html
+++ b/frontend-app/public/index.html
@@ -7,13 +7,16 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div id="root">
-    <h1>Welcome to ORM - Customer Management App</h1>
-    <ul>
-      <li><a href="/customers">Customers</a></li>
-      <li><a href="/orders">Orders</a></li>
-      <li><a href="/products">Products</a></li>
-    </ul>
-  </div>
+  <header>
+    <nav class="navbar">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/customers">Customers</a></li>
+        <li><a href="/orders">Orders</a></li>
+        <li><a href="/products">Products</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div id="root"></div>
 </body>
 </html>
